--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,6 @@
+<div class="text-center">
+  <button routerLink="admin" class="btn btn-primary">Admin Panel</button>
+</div>
 <div
   *ngIf="posts$ | async as posts; else loading"
   class="posts"
